Fixed a bug with final not showing with the default options and added credits

--- a/css/main.css
+++ b/css/main.css
@@ -110,6 +110,11 @@ section {
     overflow:hidden;
 }
 
+small {
+    display: block;
+    font-size: 10px;
+}
+
 .story-text {
     left: 50%;
     width: 400px;
